--- a/index.html
+++ b/index.html
@@ -20,6 +20,18 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum ipsam, tempore temporibus illum animi magnam! Molestiae consectetur, aperiam, voluptatum nam reiciendis fugiat laborum obcaecati nemo illo illum necessitatibus laboriosam doloribus.</p>
             </div>
         </div>
-    </section>   
+    </section>  
+
+    <section class="aulas02">
+<h1>alterandoofundodapagina</h1>
+<div class="cor-solida">
+    <h2>fundodecorsolida</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius nobis laudantium, obcaecati iste facere non ratione voluptates debitis quis maiores impedit alias voluptas accusantium, consequatur porro nesciunt maxime minima? Eius.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla ut architecto, nostrum tenetur similique quam consequuntur veritatis fugiat aut animi sit? Illum laboriosam cumque quae facere aperiam voluptatibus adipisci. Maxime?
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum excepturi laudantium consequuntur, aperiam nostrum veniam neque repellat recusandae rem tempora sed harum officia minus? Eius, vitae cum. Distinctio, neque quos?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero itaque aut quae quibusdam repudiandae similique, tempora labore minima repellat et doloribus tempore nulla tenetur deleniti provident earum minus ad placeat.
+    </p>
+</div>
+    </section>
 </body>
 </html>
